welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
 
 if (!estFaceMur()) {return true}
 else if (getCouleurSol== Color.green) {return true}
 
}        
